Fixed some z-index errors

--- a/public/resources/styles/main.css
+++ b/public/resources/styles/main.css
@@ -41,4 +41,5 @@ main {
 nav{
   position: fixed !important;
   top: 0;
+  z-index: 5;
 }
